--- a/src/components/sections/03-experiences/experiences.scss
+++ b/src/components/sections/03-experiences/experiences.scss
@@ -113,6 +113,7 @@
 @media screen and (max-width: 1224px) {
   .section > .experiences {
     & .timelines-wrapper {
+      gap: 3em;
       flex-direction: column;
 
       & > .timeline-wrapper {
